# CohenBolstadLee_eLife2017

Documentation/Blender_Scene_Models/linear/: JCVR_linear_track.dae
Documentation/Lickport_Holder_Documentation/: FiberClamp_v2.ipt  FiberClamp_v2_MIR.ipt  Lickport_Holder_v3.ipt  Lickport_Stand.ipt  Rail8QtrHole.dwg
Documentation/MouseoVeR_Configuration_Files/: JCVR_rodent_config.mvc
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Electrical Design Files/Eagle Schematics/: !Treadmill.lbr  Optical Flow Meter Camera.sch  Optical Flow Meter MCU.sch
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Electrical Design Files/ExpressPCB Files/: Final-CameraOnly.pcb  Final-MCUonly.pcb
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Electrical Design Files/Gerber Files/CameraOnly/: Camera_BottomCopper.bot  Camera_DrillFile.dri  Camera_GroundPlane.int  Camera_PowerPlane.inb  Camera_SilkScreenTop.slk  Camera_SolderMaskBackSide.smb  Camera_SolderMaskOutline.oln  Camera_SolderMaskTopSide.smt  Camera_TopCopper.top
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Electrical Design Files/Gerber Files/MCUonly/: MCU_BottomCopper.bot  MCU_DrillFile.dri  MCU_GroundPlane.int  MCU_PowerPlane.inb  MCU_SilkScreenTop.slk  MCU_SolderMaskBackSide.smb  MCU_SolderMaskOutline.oln  MCU_SolderMaskTopSide.smt  MCU_TopCopper.top
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Mechanical Design Files/: Thumbs.db
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Mechanical Design Files/Inventor Files/: Camera Assembly.idw  Camera Back Plate.idw  Camera Front body.idw  JF-VJ-FT0010.idw
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Firmware/: Treadmill6090v2.hex
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Firmware/Treadmill6090v2 May 2010/: Treadmill6090v2.cbi  Treadmill6090v2.cof  Treadmill6090v2.fct  Treadmill6090v2.map  Treadmill6090v2.prj  treadmill6090v2.c  treadmill6090v2.cci  treadmill6090v2.i
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Firmware/Treadmill6090v2 May 2010/Exe/: Treadmill6090v2.rom
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Firmware/Treadmill6090v2 May 2010/List/: Treadmill6090v2.asm  Treadmill6090v2.lst
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Matlab Code/: motiondisplay.m  motiondisplay_imaq.m  treadmillVideo.m  treadmillVideo_imaq.m
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Matlab Code/Treadmill IMAQ 2010a/: Treadmill.sln
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/Matlab Code/Treadmill IMAQ 2010a/Treadmill/: Treadmill.cpp  Treadmill.vcproj  TreadmillAdaptor.cpp  TreadmillAdaptor.h  TreadmillPropListener.cpp  TreadmillPropListener.h  TreadmillSourceListener.cpp  TreadmillSourceListener.h  acquireThread.cpp  treadmill.def
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/TreadmillDemo/: TreadmillDemo.sln  UpgradeLog.htm
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/TreadmillDemo/Backup/: TreadmillDemo.sln
Documentation/Treadmill_Tracking/TreadmillDoc/Treadmill Documentation/Software/TreadmillDemo/TreadmillDemo/: TreadmillDemo.cpp  TreadmillDemo.vcproj  TreadmillDemo.vcxproj  TreadmillDemo.vcxproj.filters  stdafx.cpp
Jovian/: CMakeLists.txt  README.txt  README_OSX.txt  README_bugs.txt  build.cmake  mouseover.pro
Jovian/CMakeModules/: CMakeMacros.cmake  FindBulletHelper.cmake  FindOSGHelper.cmake  FindPython.cmake
Jovian/documentation/: Doxyfile
Jovian/external_libraries/: qtserialport.tgz
Jovian/src/: CMakeLists.txt  CameraBlockUpdateCallback.cpp  CameraBlockUpdateCallback.h  CameraPathUpdateCallback.cpp  CameraPathUpdateCallback.h  CameraThresholdUpdateCallback.cpp  CameraThresholdUpdateCallback.h  CameraUpdateCallback.h  ColladaVisitor.h  Communicator.cpp  Communicator.h  Config_Memento.cpp  Config_Memento.h  Console.cpp  Console.h  Globals.h  Graph_Evaluator.h  MotionCallback.cpp  MotionCallback.h  MyGraphicsWindowQt.cpp  MyGraphicsWindowQt.h  RadioButtonGroup.cpp  RadioButtonGroup.h  console.ui  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  hud.cpp  hud.h  jovian.qrc  node.cpp  node.h  scene_model.cpp  scene_model.h  shader_defs.h  src.pro  viewingWindowQt.cpp  viewingWindowQt.h
Jovian/src/QCustomPlot/: qcustomplot.cpp  qcustomplot.h
Jovian/src/QCustomPlot/documentation/: qcustomplot.qch
Jovian/src/QCustomPlot/documentation/html/: axis_8h_source.html  classQCPAbstractItem.html  classQCPAbstractLegendItem.html  classQCPAbstractPlottable.html  classQCPAxis.html  classQCPAxisRect.html  classQCPBars.html  classQCPCurve.html  classQCPGraph.html  classQCPGrid.html  classQCPItemAnchor.html  classQCPItemBracket.html  classQCPItemCurve.html  classQCPItemEllipse.html  classQCPItemLine.html  classQCPItemPixmap.html  classQCPItemPosition.html  classQCPItemRect.html  classQCPItemStraightLine.html  classQCPItemText.html  classQCPItemTracer.html  classQCPLayerable.html  classQCPLayout.html  classQCPLayoutElement.html  classQCPLayoutGrid.html  classQCPLayoutInset.html  classQCPLegend.html  classQCPPlotTitle.html  classQCPPlottableLegendItem.html  classQCPRange.html  classQCPStatisticalBox.html  classQCustomPlot.html  core_8h_source.html  functions_0x65.html  functions_0x6c.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_func_0x65.html  functions_func_0x72.html  (+30 more)
Jovian/src/SerialPortDialog/: settingsdialog.cpp  settingsdialog.h
Jovian/utils/: jovian_out_to_rds.py
MouseOver/: CMakeLists.txt
MouseOver/CMakeModules/: FindJovian.cmake  FindQtSerialPort.cmake
MouseOver/src/: CMakeLists.txt  main.cpp
RemoteDataServer/: CMakeLists.txt
RemoteDataServer/src/: CMakeLists.txt  server.cpp
(+5 files in other folders)
