SET(TARGET_SRC
    main.cpp
)



IF( QT4_FOUND )
  ADD_DEFINITIONS(-DUSE_QT4)
  INCLUDE_DIRECTORIES( ${Jovian_SOURCE_DIR}/src ${OSG_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTOPENGL_INCLUDE_DIR} ${QT_WIDGETS_INCLUDE_DIR} ${PYTHON_INCLUDE_PATH} ${Boost_INCLUDE_DIRS})
  SET(TARGET_EXTERNAL_LIBRARIES 	${JOVIAN_LIBRARIES}
    ${Boost_LIBRARIES}
    ${PYTHON_LIBRARIES}
    ${OSGBULLET_LIBRARIES}
    ${OSGWORKS_LIBRARIES}
    ${OPENSCENEGRAPH_LIBRARIES}
    ${BULLET_LIBRARIES}
    ${QT_QTCORE_LIBRARY}
    ${QT_QTGUI_LIBRARY}
    ${QT_QTOPENGL_LIBRARY}
    ${QtSerialPort_LIBRARIES} )

  IF (CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(TARGET_EXTERNAL_LIBRARIES 	${JOVIAN_LIBRARIES_DEBUG}
      ${Boost_LIBRARIES_DEBUG}
      ${PYTHON_LIBRARIES}
      ${OSGBULLET_LIBRARIES_DEBUG}
      ${OSGWORKS_LIBRARIES_DEBUG}
      ${OPENSCENEGRAPH_LIBRARIES_DEBUG}
      ${BULLET_LIBRARIES_DEBUG}
      ${QT_QTCORE_LIBRARY}
      ${QT_QTGUI_LIBRARY}
      ${QT_QTOPENGL_LIBRARY}
      ${QtSerialPort_LIBRARIESl})
  ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug")
ELSE()
  INCLUDE_DIRECTORIES( ${Jovian_SOURCE_DIR}/src ${OSG_INCLUDE_DIR} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS} ${Qt5OpenGL_INCLUDE_DIRS} ${Qt5PrintSupport_INCLUDE_DIRS} ${Qt5SerialPort_INCLUDE_DIRS} ${PYTHON_INCLUDE_PATH} ${Boost_INCLUDE_DIRS} )
  SET(TARGET_EXTERNAL_LIBRARIES 	${JOVIAN_LIBRARIES}
    ${Boost_LIBRARIES}
    ${PYTHON_LIBRARIES}
    ${OSGBULLET_LIBRARIES}
    ${OSGWORKS_LIBRARIES}
    ${OPENSCENEGRAPH_LIBRARIES}
    ${BULLET_LIBRARIES}
    ${Qt5Core_LIBRARIES}
    ${Qt5Widgets_LIBRARIES}
    ${Qt5Gui_LIBRARIES}
    ${Qt5OpenGL_LIBRARIES}
    ${Qt5PrintSupport_LIBRARIES}
    ${Qt5SerialPort_LIBRARIES} )

  IF (CMAKE_BUILD_TYPE MATCHES "Debug")
    SET(TARGET_EXTERNAL_LIBRARIES 	${JOVIAN_LIBRARIES_DEBUG}
      ${Boost_LIBRARIES}
      ${PYTHON_LIBRARIES}
      ${OSGBULLET_LIBRARIES}
      ${OSGWORKS_LIBRARIES}
      ${OPENSCENEGRAPH_LIBRARIES}
      ${BULLET_LIBRARIES}
      ${Qt5Core_LIBRARIES}
      ${Qt5Widgets_LIBRARIES}
      ${Qt5Gui_LIBRARIES}
      ${Qt5OpenGL_LIBRARIES}
      ${Qt5PrinterSupport_LIBRARIES}
      ${Qt5SerialPort_LIBRARIES} )

    link_directories(${Boost_LIBRARY_DIR})
  ELSE()
    link_directories(${Boost_LIBRARY_DIR_RELEASE})
  ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug")
ENDIF()

ADD_DEFINITIONS(-DQT_NO_KEYWORDS)

#### end var setup  ###
INCLUDE(OsgMacroUtils)
SETUP_EXAMPLE(MouseOver)

TARGET_LINK_LIBRARIES("${TARGET_DEFAULT_PREFIX}MouseOver" ${CARBON_LIBRARY} ${COCOA_LIBRARY} ${OPENGL_gl_LIBRARY} ${TARGET_EXTERNAL_LIBRARIES})
