SET(TARGET_SRC
    server
)


INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
SET(TARGET_EXTERNAL_LIBRARIES ${Boost_LIBRARIES} )

IF (CMAKE_BUILD_TYPE MATCHES "Debug")
  SET(TARGET_EXTERNAL_LIBRARIES ${Boost_LIBRARIES_DEBUG} )

  link_directories(${Boost_LIBRARY_DIR_DEBUG})
ELSE()
  link_directories(${Boost_LIBRARY_DIR_RELEASE})
ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug")

INCLUDE(OsgMacroUtils)
SETUP_EXAMPLE(remoteDataServer)

TARGET_LINK_LIBRARIES("${TARGET_DEFAULT_PREFIX}remoteDataServer" ${TARGET_EXTERNAL_LIBRARIES})
